--- a/angular.json
+++ b/angular.json
@@ -17,18 +17,20 @@
       "sourceRoot": "src",
       "prefix": "app",
       "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-angular:browser",
-          "options": {
-            "outputPath": "dist/portfolio-new",
-            "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "tsconfig.app.json",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
+       "build": {
+  "builder": "@angular-devkit/build-angular:browser",
+  "options": {
+    "outputPath": "docs",
+    "index": "src/index.html",
+    "main": "src/main.ts",
+    "polyfills": "src/polyfills.ts",
+    "tsConfig": "tsconfig.app.json",
+    "baseHref": "/Portfolio-new.github.io/",
+    "deployUrl": "/Portfolio-new.github.io/",
+    "assets": [
+      "src/favicon.ico",
+      "src/assets"
+    ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.css",
